[package]
name = "mysql_quick"
version = "0.4.2"
edition = "2021"
authors = ["zomem"]
description = "mysql 数据库快速连接方法"
license = "MIT"
readme = "README.md"
include = ["/src"]
repository = "https://github.com/zomem/mysql_quick"
keywords = ["mysql", "sql"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "23.0"
mysql_common = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
regex = "1.7"
