[package]
name = "mysql_quick"
version = "1.2.2"
edition = "2021"
authors = ["zomem"]
description = "mysql 数据库快速连接方法"
license = "MIT"
readme = "README.md"
include = ["/src"]
repository = "https://github.com/zomem/mysql_quick"
keywords = ["mysql", "sql"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
